# frame-extractor

./: CAPABILITIES.md  Cargo.toml
src/: blur.rs  dedup.rs  frame.rs  main.rs  optimize.rs  perspective.rs  pipeline.rs  pipeline_spread.rs  pipeline_video.rs  scene.rs  segment.rs  upload.rs
